@@ -4525,10 +4525,12 @@ Default: false (but true for CRAN submission checks).
 
 @item _R_CHECK_RD_VALIDATE_RD2HTML_
 Check the validity of the package HTML help pages using HTML tidy
-(@uref{https://www.html-tidy.org/}) (if available on the system path for
-executables). 
+(@uref{https://www.html-tidy.org/}) (if a suitable version is available
+on the system path for executables or its path is specified by
+environment variable @env{R_TIDYCMD}).  macOS users are advised to
+install 5.8.0 or later from @uref{http://binaries.html-tidy.org/}.
 Default: false (but true for CRAN submission checks). @option{-as-cran}
-can be overridden by setting this variable to a false value. 
+can be overridden by setting this variable to a false value.
 @end vtable
 
 The following variables control checks for undeclared/unconditional use
