@@ -1,6 +1,6 @@
 % File src/library/base/man/EnvVar.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2007-2021 R Core Team
+% Copyright 2007-2022 R Core Team
 % Distributed under GPL 2 or later
 
 \name{EnvVar}
@@ -24,6 +24,7 @@
 \alias{R_SHARE_DIR}
 \alias{R_SUPPORT_OLD_TARS}
 \alias{R_TEXI2DVICMD}
+\alias{R_TIDYCMD}
 \alias{R_UNZIPCMD}
 \alias{R_ZIPCMD}
 \alias{TMPDIR}
@@ -133,6 +134,9 @@
       \code{\link{options}("texi2dvi")}, used by
       \code{\link{texi2dvi}} and \code{\link{texi2pdf}} in package \pkg{tools}.
     }
+    \item{\env{R_TIDYCMD}:}{The path to HTML \command{tidy}. Used by
+      \command{R CMD check} if \env{_R_CHECK_RD_VALIDATE_RD2HTML_} is
+      set to a true value (as it is by \option{--as-cran}.}
     \item{\env{R_UNZIPCMD}:}{The path to \command{unzip}.  Sets the
       initial value for \code{\link{options}("unzip")} on a Unix-alike
       when namespace \pkg{utils} is loaded.}
